--- a/src/components/Prueba1FU.css
+++ b/src/components/Prueba1FU.css
@@ -2,3 +2,18 @@
     align-items: center;
     justify-content: center;
 }
+
+#name{
+    display: flex;
+width: 712px;
+height: 38px;
+padding: 8px;
+align-items: flex-start;
+gap: 10px;
+flex-shrink: 0;
+
+border-radius: 8px;
+border: 1px solid var(--Gris-claro-Bluetab, #DAD7CB);
+background: var(--Blanco, #FFF);
+
+}
