--- a/src/components/Prueba1FU.css
+++ b/src/components/Prueba1FU.css
@@ -6,43 +6,100 @@
 .group-title{
     color: var(--Naranja-Bluetab, #E05206);
     font-family: Titillium Web;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 600;
-    line-height: 150%; /* 36px */
-    letter-spacing: -0.264px;
+    line-height: 150%; /* 2.25rem */
+    letter-spacing: -0.0165rem;
 
 }
 #formCv input, textarea{
-    
-    border-radius: 8px;
+    border-radius: 0.5rem;
     border: 1px solid var(--Gris-claro-Bluetab, #DAD7CB);
     background: var(--Blanco, #FFF);
+    color: var(--Gris-Bluetab, #675C53);
+
+    /* Cuerpo texto */
+    font-family: Titillium Web;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 1.3125rem */
+    letter-spacing: -0.00963rem;
 }
 
 .group-large-input{
     display: flex;
-    width: 712px;
-    height: 38px;
-    padding: 8px;
+    width: 44.5rem;
+    height: 2.375rem;
+    padding: 0.5rem;
     align-items: flex-start;
-    gap: 10px;
+    gap: 0.625rem;
     flex-shrink: 0;
 }
 
 #summary{
     display: flex;
-    width: 712px;
-    height: 114px;
-    padding: 8px;
+    width: 44.5rem;
+    height: 7.125rem;
+    padding: 0.5rem;
     align-items: flex-start;
-    gap: 10px;
+    gap: 0.625rem;
     flex-shrink: 0;
 }
 
 .container-date{
+    display: flex;
+    margin: 0;
+}
 
-    width: 712px;
-    height: 38px;
+.input-date{
+    
+    width: 21.369rem;
+    height: 2.375rem;
+    padding: 0.5rem;
+    
+    align-items: flex-start;
     flex-shrink: 0;
+}
+
+
+:root {
+    --azul-bluetab: rgba(33, 36, 146, 1);
+    --azul-claro-bluetab: rgba(111, 154, 211, 1);
+    --blanco: rgba(255, 255, 255, 1);
+    --cuerpo-texto-font-family: "TitilliumWeb-Regular", Helvetica;
+    --cuerpo-texto-font-size: 14px;
+    --cuerpo-texto-font-style: normal;
+    --cuerpo-texto-font-weight: 400;
+    --cuerpo-texto-letter-spacing: -0.1540000033378601px;
+    --cuerpo-texto-line-height: 150%;
+    --gris-bluetab: rgba(103, 92, 83, 1);
+    --gris-claro-bluetab: rgba(218, 215, 203, 1);
+    --gris-men: rgba(237, 235, 231, 1);
+    --naranja-bluetab: rgba(224, 82, 6, 1);
+    --sombra-boton: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+    --texto-men-desplegado-font-family: "TitilliumWeb-SemiBold", Helvetica;
+    --texto-men-desplegado-font-size: 11px;
+    --texto-men-desplegado-font-style: normal;
+    --texto-men-desplegado-font-weight: 600;
+    --texto-men-desplegado-letter-spacing: -0.12100000262260437px;
+    --texto-men-desplegado-line-height: 150%;
+    --texto-principal-men-font-family: "TitilliumWeb-Bold", Helvetica;
+    --texto-principal-men-font-size: 12px;
+    --texto-principal-men-font-style: normal;
+    --texto-principal-men-font-weight: 700;
+    --texto-principal-men-letter-spacing: -0.13200000286102295px;
+    --texto-principal-men-line-height: 150%;
+    --texto-secundario-men-font-family: "TitilliumWeb-Regular", Helvetica;
+    --texto-secundario-men-font-size: 12px;
+    --texto-secundario-men-font-style: normal;
+    --texto-secundario-men-font-weight: 400;
+    --texto-secundario-men-letter-spacing: -0.13200000286102295px;
+    --texto-secundario-men-line-height: 150%;
+    --variable-collection-blanco: rgba(255, 255, 255, 1);
+  }
+
+  input[type="date"], input[type="text"]{
+    
 }
