--- a/src/components/Prueba1FU.css
+++ b/src/components/Prueba1FU.css
@@ -1,11 +1,12 @@
 #formCv{
-    align-items: center;
-    justify-content: center;
+    display: grid; place-items: center;
+}
+.container-form{
+    
 }
 
 .group-title{
     color: var(--Naranja-Bluetab, #E05206);
-    font-family: Titillium Web;
     font-size: 1.5rem;
     font-style: normal;
     font-weight: 600;
@@ -20,7 +21,6 @@
     color: var(--Gris-Bluetab, #675C53);
 
     /* Cuerpo texto */
-    font-family: Titillium Web;
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 400;
@@ -46,6 +46,13 @@
     align-items: flex-start;
     gap: 0.625rem;
     flex-shrink: 0;
+}
+section{
+    margin: 1rem 0 1rem 0;
+}
+
+.group-main-inputs{
+    margin: 0.6rem 0 0.6rem 0;
 }
 
 .container-date{
