--- a/src/components/Prueba1FU.css
+++ b/src/components/Prueba1FU.css
@@ -60,53 +60,33 @@ section{
     margin: 0;
 }
 
-.input-date{
-    
+.date{
     width: 21.369rem;
     height: 2.375rem;
     padding: 0.5rem;
-    
     align-items: flex-start;
     flex-shrink: 0;
 }
 
+/* Establece un margen derecho en el primer input y un margen izquierdo en el segundo input */
+.date:first-child {
+    margin-right: 0.41rem; /* Ajusta el valor según tu preferencia de espacio */
+}
 
-:root {
-    --azul-bluetab: rgba(33, 36, 146, 1);
-    --azul-claro-bluetab: rgba(111, 154, 211, 1);
-    --blanco: rgba(255, 255, 255, 1);
-    --cuerpo-texto-font-family: "TitilliumWeb-Regular", Helvetica;
-    --cuerpo-texto-font-size: 14px;
-    --cuerpo-texto-font-style: normal;
-    --cuerpo-texto-font-weight: 400;
-    --cuerpo-texto-letter-spacing: -0.1540000033378601px;
-    --cuerpo-texto-line-height: 150%;
-    --gris-bluetab: rgba(103, 92, 83, 1);
-    --gris-claro-bluetab: rgba(218, 215, 203, 1);
-    --gris-men: rgba(237, 235, 231, 1);
-    --naranja-bluetab: rgba(224, 82, 6, 1);
-    --sombra-boton: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
-    --texto-men-desplegado-font-family: "TitilliumWeb-SemiBold", Helvetica;
-    --texto-men-desplegado-font-size: 11px;
-    --texto-men-desplegado-font-style: normal;
-    --texto-men-desplegado-font-weight: 600;
-    --texto-men-desplegado-letter-spacing: -0.12100000262260437px;
-    --texto-men-desplegado-line-height: 150%;
-    --texto-principal-men-font-family: "TitilliumWeb-Bold", Helvetica;
-    --texto-principal-men-font-size: 12px;
-    --texto-principal-men-font-style: normal;
-    --texto-principal-men-font-weight: 700;
-    --texto-principal-men-letter-spacing: -0.13200000286102295px;
-    --texto-principal-men-line-height: 150%;
-    --texto-secundario-men-font-family: "TitilliumWeb-Regular", Helvetica;
-    --texto-secundario-men-font-size: 12px;
-    --texto-secundario-men-font-style: normal;
-    --texto-secundario-men-font-weight: 400;
-    --texto-secundario-men-letter-spacing: -0.13200000286102295px;
-    --texto-secundario-men-line-height: 150%;
-    --variable-collection-blanco: rgba(255, 255, 255, 1);
-  }
-
-  input[type="date"], input[type="text"]{
+  input[type="text"]{
     
+}
+
+.button-save{
+    display: flex;
+    width: 8.5625rem;
+    height: 2.375rem;
+    padding: 0.625rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    flex-shrink: 0;
+
+    border-radius: 1.5rem;
+    background: var(--Azul-claro-Bluetab, #6F9AD3);
 }
