--- a/src/components/Prueba1FU.css
+++ b/src/components/Prueba1FU.css
@@ -32,10 +32,12 @@ section {
     align-items: flex-start;
     gap: 0.625rem;
     flex-shrink: 0;
-
-
-
+    
 }
+
+input:focus, textarea:focus {
+    outline: none;
+  }
 
 .group-title {
     color: var(--Naranja-Bluetab, #E05206);
@@ -92,9 +94,6 @@ p {
     margin: 0.8rem 0 0.8rem 0;
 }
 
-.label-date {
-
-}
 
 .date {
     width: 21.369rem;
@@ -123,8 +122,6 @@ p {
     border: none;
     border-radius: 1.5rem;
     background: var(--Azul-claro-Bluetab, #6F9AD3);
-
-   
 
     color: var(--Blanco, #FFF);
     text-align: center;
